# tip-out

./: .gitignore  AGENTS.md  OVERVIEW.md  README.md  config.yaml  pyproject.toml  run_all.py
.claude/: settings.json
.github/workflows/: release.yml
docs/: parent-install-email.md
docs/cowork-skill-refs/: 01-agent-skills-overview.md  02-skills-with-api.md  03-plugins-reference.md  04-anthropic-skills-repo.md  05-use-skills-in-claude.md  06-use-plugins-in-cowork.md  index.md
docs/plans/: 2026-04-18-surfing-deer-tipout-automation-design.md  2026-04-18-surfing-deer-tipout-implementation.md
docs/superpowers/plans/: 2026-05-17-tipout-hours.md
docs/superpowers/specs/: 2026-05-17-tipout-hours-design.md  2026-06-02-cowork-packaging-design.md
packaging/: pyinstaller_entry.py
scripts/: check.py
skills/tipout/: SKILL.md
src/tipout/: anomalies.py  archive.py  bootstrap.py  cli.py  config.py  doctor.py  hours.py  name_resolution.py  per_employee.py  period.py  pos_parser.py  regression.py  roster.py  runner.py  summary.py  time_clock.py  validator.py  wvm_parser.py
tests/: build_synthetic_fixture.py  conftest.py  test_anomalies.py  test_archive.py  test_bootstrap.py  test_check_script.py  test_cli.py  test_cli_json.py  test_config.py  test_doctor.py  test_hours.py  test_init.py  test_name_resolution.py  test_per_employee.py  test_period.py  test_pos_parser.py  test_regression.py  test_roster.py  test_runner.py  test_smoke.py  test_summary.py  test_time_clock.py  test_validator.py  test_wvm_parser.py  wvm_fixtures.py
tests/fixtures/: tiny_config.yaml  tiny_pos.xlsx  tiny_time_clock.csv
tests/fixtures/periods/_synthetic/: input_config.yaml  input_hours.xlsx  input_pos.xlsx  (+1 more)
tipout-plugin/.claude-plugin/: plugin.json
tipout-plugin/skills/tipout/: SKILL.md
(+4 files in other folders)
