[project]
name = "tipout"
version = "0.1.0"
description = "Surfing Deer tip-out automation"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
tipout = "tipout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
